add additional OIDC provider.