@@ -6,7 +6,6 @@ import cz.muni.ics.kypo.commons.security.enums.SpringProfiles;
 import org.mitre.oauth2.introspectingfilter.IntrospectingTokenService;
 import org.mitre.oauth2.introspectingfilter.service.IntrospectionConfigurationService;
 import org.mitre.oauth2.introspectingfilter.service.impl.JWTParsingIntrospectionConfigurationService;
-import org.mitre.oauth2.introspectingfilter.service.impl.StaticIntrospectionConfigurationService;
 import org.mitre.oauth2.model.RegisteredClient;
 import org.mitre.openid.connect.client.service.ClientConfigurationService;
 import org.mitre.openid.connect.client.service.ServerConfigurationService;
@@ -53,25 +52,24 @@ public class ResourceServerSecurityConfig {
     @Value("#{'${kypo.muni.idp.4oauth.scopes}'.split(',')}")
     private Set<String> scopesMUNI;
 
-    //TODO uncomment after adding new custom mitre provider
-//    @Value("${kypo.mitre.idp.4oauth.issuer}")
-//    private String issuerKYPO;
-//    @Value("${kypo.mitre.idp.4oauth.introspectionURI}")
-//    private String introspectionURIKYPO;
-//    @Value("${kypo.mitre.idp.4oauth.resource.clientId}")
-//    private String clientIdOfResourceKYPO;
-//    @Value("${kypo.mitre.idp.4oauth.resource.clientSecret}")
-//    private String clientSecretResourceKYPO;
-//    @Value("#{'${kypo.mitre.idp.4oauth.scopes}'.split(',')}")
-//    private Set<String> scopesKYPO;
+    @Value("${kypo.mitre.idp.4oauth.issuer}")
+    private String issuerKYPO;
+    @Value("${kypo.mitre.idp.4oauth.introspectionURI}")
+    private String introspectionURIKYPO;
+    @Value("${kypo.mitre.idp.4oauth.resource.clientId}")
+    private String clientIdOfResourceKYPO;
+    @Value("${kypo.mitre.idp.4oauth.resource.clientSecret}")
+    private String clientSecretResourceKYPO;
+    @Value("#{'${kypo.mitre.idp.4oauth.scopes}'.split(',')}")
+    private Set<String> scopesKYPO;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
-        configuration.setExposedHeaders(Arrays.asList("x-auth-token", "Content-Disposition"));
+        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("authorization", "content-type", "x-auth-token"));
+        configuration.setExposedHeaders(List.of("x-auth-token", "Content-Disposition"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
@@ -92,20 +90,18 @@ public class ResourceServerSecurityConfig {
     public ServerConfigurationService serverConfigurationService() {
         DynamicServerConfigurationService serverConfigurationService =
                 new DynamicServerConfigurationService();
-        //TODO add issuerKYPO to the set of whitelist
-        serverConfigurationService.setWhitelist(new HashSet<>(Set.of(issuerMUNI)));
+        serverConfigurationService.setWhitelist(new HashSet<>(Set.of(issuerMUNI, issuerKYPO)));
         return serverConfigurationService;
     }
 
     @Bean
     public ClientConfigurationService clientConfigurationService() {
         Map<String, RegisteredClient> clients = new HashMap<>();
-        //TODO uncomment after adding new custom mitre provider
-//        RegisteredClient clientKYPO = new RegisteredClient();
-//        clientKYPO.setClientId(clientIdOfResourceKYPO);
-//        clientKYPO.setClientSecret(clientSecretResourceKYPO);
-//        clientKYPO.setScope(scopesKYPO);
-//        clients.put(issuerKYPO, clientKYPO);
+        RegisteredClient clientKYPO = new RegisteredClient();
+        clientKYPO.setClientId(clientIdOfResourceKYPO);
+        clientKYPO.setClientSecret(clientSecretResourceKYPO);
+        clientKYPO.setScope(scopesKYPO);
+        clients.put(issuerKYPO, clientKYPO);
 
         RegisteredClient clientMUNI = new RegisteredClient();
         clientMUNI.setClientId(clientIdOfResourceMUNI);
